tests/ft/type_checking/invalid/if_else.jk
if true {
    15
} else {
    false
}

if 15 {
    15
} else {
    14
}
